# ToTf

./: CHANGES.md  IMPLEMENTATION_COMPLETE.md  LOSS_CURVE_ANALYSIS.md  README.md  STRUCTURE.md  TENSORFLOW_IMPLEMENTATION_SUMMARY.md  __init__.py  backend.py  backend_manager.py  example_loss_analysis_pytorch.py  example_loss_analysis_tf.py  pyproject.toml  requirements.txt  setup.py  test_modelview_quick.py  test_pytorch_modelview_quick.py  verify_modelview.py
.github/workflows/: release.yaml
ToTf/: __init__.py
ToTf/pytorch/: README.md  smartsummary.py  utils.py
ToTf/tenf/: __init__.py
docs/: COMPLEX_ARCHITECTURE_TESTS.md  IMPLEMENTATION_SUMMARY_TORCHVIEW.md  LOSS_CURVE_IMPLEMENTATION_SUMMARY.md  MODELVIEW_IMPLEMENTATION_SUMMARY.md  MODELVIEW_TORCHVIEW_FEATURES.md  PYTORCH_MODELVIEW_IMPLEMENTATION.md  QUICKSTART_MODELVIEW.md  QUICKSTART_MODELVIEW_PYTORCH.md  TENSORFLOW_IMPLEMENTATION_SUMMARY.md  UTILITIES_IMPLEMENTATION_SUMMARY.md
examples/: demo_complex_architectures.py  example_loss_analysis_pytorch.py  example_loss_analysis_tf.py  example_modelview_advanced.py  example_modelview_pytorch.py  example_modelview_tf.py  example_smartsummary.py  example_smartsummary_tf.py  example_usage.py  example_utils_pytorch.py  example_utils_tf.py
outputs/: README.md
pytorch/: README.md  __init__.py  modelview.py  smartsummary.py  trainingmonitor.py  utils.py
tenf/: README.md  __init__.py  computation_nodes.py  modelview.py  smartsummary.py  utils.py
test/: test_connection_api.py  test_connections_visual.py  test_integration.py  test_modelview_tf.py  test_monitor.py  test_onnx_pytorch.py  test_onnx_tensorflow.py  test_smartsummary.py  test_smartsummary_features.py  test_smartsummary_tf.py  test_utils_integration.py  test_utils_pytorch.py  test_utils_tf.py  verify_connections.py  verify_modelview_pytorch.py
torch/: README.md  trainingmonitor.py
