[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ToTf"
version = "0.1.0"
description = "A Cross-Library Compatible Library for PyTorch and TensorFlow that provides advanced features for ease of use"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Akshay"},
    {name = "Shyamanth Reddy"},
    {name = "Vijay Aravind"}
]
keywords = [
    "pytorch",
    "tensorflow",
    "deep-learning",
    "neural-networks",
    "model-visualization",
    "training-monitoring",
    "machine-learning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# PyTorch support
torch = [
    "torch>=2.0.0",
    "torchview>=0.2.6",
]

# TensorFlow support
tensorflow = [
    "tensorflow>=2.13.0",
]

# Model visualization dependencies
visualization = [
    "graphviz>=0.20.0",
    "Pillow>=10.0.0",
]

# Complete PyTorch installation with visualization
pytorch-full = [
    "torch>=2.0.0",
    "torchview>=0.2.6",
    "graphviz>=0.20.0",
    "Pillow>=10.0.0",
]

# Complete TensorFlow installation with visualization
tensorflow-full = [
    "tensorflow>=2.13.0",
    "graphviz>=0.20.0",
    "Pillow>=10.0.0",
]

# All features (both frameworks)
all = [
    "torch>=2.0.0",
    "tensorflow>=2.13.0",
    "torchview>=0.2.6",
    "graphviz>=0.20.0",
    "Pillow>=10.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ToTf"
Documentation = "https://github.com/yourusername/ToTf#readme"
Repository = "https://github.com/yourusername/ToTf"
"Bug Tracker" = "https://github.com/yourusername/ToTf/issues"

[tool.setuptools]
packages = ["pytorch", "tenf"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--color=yes",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["pytorch", "tenf"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
